[package]
name = "hash_os"
version = "0.1.0"
authors = ["Haoxi Tan <haoxi.tan@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version="0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
